--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title></title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <!-- style sheet to override bootstrap -->
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
    </head>
    <body>
   
@@ -29,15 +29,16 @@
 <div id="nav">
     <div class="navbar navbar-default navbar-static">
         <div class="container">
-            <div class="navbar-collapse collapse">
+            <div class="navbar">
+            <!-- <div class="navbar-collapse collapse"> -->
               <ul class="nav navbar-nav">
               <!-- <ul class="nav pull-right navbar-nav"> -->
                 <li>
                   <form class="navbar-form">
-                    <input type="text" class="form-control" placeholder="Event Category">
-                    <input type="text" class="form-control" placeholder="Event Location (eg. Cleveland, OH)">
-                    <input type="text" class="form-control" placeholder="Start Date (Optional)">
-                    <input type="text" class="form-control" placeholder="End Date (Optional)">
+                    <input type="text" class="form-control search-form" placeholder="Event Category">
+                    <input type="text" class="form-control search-form" placeholder="Event Location (eg. Cleveland, OH)">
+                    <input type="text" class="form-control search-form" placeholder="Start Date (Optional)">
+                    <input type="text" class="form-control search-form" placeholder="End Date (Optional)">
                     <!-- submit button -->
                     <button type="submit" class="btn btn-default" id="run-search"><i class="glyphicon glyphicon-search"></i></button>
                     <!-- clear button -->
@@ -45,6 +46,7 @@
                   </form>
                 </li>
               </ul>
+            <!-- </div> -->
             </div>
         </div>
     </div>
