email input and footer added

--- a/details.html
+++ b/details.html
@@ -53,5 +53,38 @@
           </li>
         </ul>
         </div>
+         <!--email-input-->
+     <section>
+<div class="container">
+  <div class="row">
+    <div class=" col-xs-12 col-sm-12 col-md-10 col-lg-10 ">
+  
+       <div class="well">
+             <form action="#">
+              <div class="input-form">
+                 <h4>SUBSCRIBE FOR FUTURE EVENTS</h4>
+                 <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here" required>
+                 <br><br>
+                <a href="#" class="btn btn-info btn-lg">
+          <span class="glyphicon glyphicon-envelope"></span> SUBMIT
+        </a>
+
+              </div>
+             </form>
+    </div>
+  </div>
+</div>
+</section>
+        <!-- Footer -->
+    <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" 
+    <footer class="py-5 bg-dark">
+      <div class="footer-container">
+        <p class="m-0 text-center text-white">Copyright &copy; CodingCrew Event App 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+    </div>
+    </div>
     </body>
   </html>
