--- a/details.html
+++ b/details.html
@@ -15,76 +15,91 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-<div class="container"> 
-<header class="masthead">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-6">
-                <h1><a href="#" title="scroll down for your viewing pleasure">EVENT APP</a></h1>
-            </div>
-        </div>
-    </div>
-</header>
-</div>
- <div class="container">
-            <section class="py-5 bg-image-full" style="background-image: url('http://cache.wizardworld.com/files/hero/_1200x630_fit_center-center_100/WW-cleveland.jpg');">
-                <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
-                <div style="height: 400px;"></div>
-            </section>
-            <!-- Page Heading -->
-            <h1 id="titleRow" class="my-4">Event Title
-        <small>near <span id="searchLocation">...</span></small>
-      </h1>
-            <div class="row" id="eventDescriptionRow"></div>
-        </div>
-        <br>
-        <br>
-        <!-- Pagination -->
-        <div class="container">
-        <ul class="pagination pagination-lg">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo; Return to 
-                <span id="eventKeywords">Featured Events </span>
-                near
-                <span id="searchLocation">...</span>
-              </span>
-            </a>
-          </li>
-        </ul>
-        </div>
-         <!--email-input-->
-     <section>
-<div class="container">
-  <div class="row">
-    <div class=" col-xs-12 col-sm-12 col-md-10 col-lg-10 ">
-  
-       <div class="well">
-             <form action="#">
-              <div class="input-form">
-                 <h4>SUBSCRIBE FOR FUTURE EVENTS</h4>
-                 <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here" required>
-                 <br><br>
-                <a href="#" class="btn btn-info btn-lg">
-          <span class="glyphicon glyphicon-envelope"></span> SUBMIT
-        </a>
 
-              </div>
-             </form>
+<!-- Master header -->    
+<div class="container"> 
+  <header class="masthead">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-6">
+          <h1><a href="#" title="scroll down for your viewing pleasure">EVENT APP</a></h1>
+        </div>
+      </div>
     </div>
+  </header>
+</div>
+
+<!-- Cleveland Photo -->
+<div class="container">
+  <section id="photo" class="py-5 bg-image-full">
+  </section>
+
+  <!-- Below photo -->
+  <h1 id="titleRow" class="my-4">Event Title
+    <small>near 
+      <span id="searchLocation">...</span>
+    </small>
+  </h1>
+
+  <!-- Details area -->   
+  <div class="row" id="eventDescriptionRow"></div>
+  <br>
+  <br>
+
+  <!-- Pagination -->
+  <div class="container">
+    <ul class="pagination pagination-lg">
+      <li class="page-item disabled">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo; Return to 
+            <span id="eventKeywords">Featured Events </span>
+                near
+              <span id="searchLocation">...</span>
+          </span>
+        </a>
+      </li>
+    </ul>
   </div>
 </div>
-</section>
-        <!-- Footer -->
+<br />
+<br />
+
+<!--email-input-->
+<section>
+  <div class="container">
     <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" 
+      <div class=" col-xs-12 col-sm-12 col-md-10 col-lg-10 ">
+        <div class="well">
+          <form action="#">
+            <div class="input-form">
+              <h4>SUBSCRIBE FOR FUTURE EVENTS</h4>
+                <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here" required>
+                <br><br>
+                <a href="#" class="btn btn-info btn-lg">
+                  <span class="glyphicon glyphicon-envelope"></span> SUBMIT
+                </a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <footer class="py-5 bg-dark">
       <div class="footer-container">
         <p class="m-0 text-center text-white">Copyright &copy; CodingCrew Event App 2017</p>
       </div>
-      <!-- /.container -->
     </footer>
-    </div>
-    </div>
-    </body>
-  </html>
+  </div>
+</div>
+
+    <!-- scripts -->
+    <script type="text/javascript" src="http://api.eventful.com/js/api"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/main.js"></script>
+</body>
+</html>
