--- a/details.html
+++ b/details.html
@@ -33,8 +33,10 @@
 <div class="container">
   <section id="photo" class="py-5 bg-image-full">
   </section>
-
+  <br />
+  <br />
   <!-- Below photo -->
+  <div id="belowPhoto" class="well">
   <h1 id="titleRow" class="my-4">Event Title
     <small>near 
       <span id="searchLocation">...</span>
@@ -43,6 +45,7 @@
 
   <!-- Details area -->   
   <div class="row" id="eventDescriptionRow"></div>
+  </div>
   <br>
   <br>
 
