--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </div>
         </header>
     </div>
+    <!-- Cleveland Photo -->
+    <div class="container">
+        <section id="photo" class="py-5 bg-image-full">
     <!-- Navbar with search form -->
     <div class="container-fluid">
         <div id="nav">
@@ -63,20 +66,20 @@
             </div>
         </div>
     </div>
-    <br />
-    <br />
-    <!-- Cleveland Photo -->
-    <div class="container">
-        <section id="photo" class="py-5 bg-image-full">
         </section>
+        <br />
+        <br />
         <!-- Below photo -->
-        <h1 class="my-4">Featured Events
-    <small>near 
-      <span id="searchLocation">...</span>
-    </small>
-  </h1>
+        <div id="belowPhoto" class="well">
+        <h1 class="my-4">FEATURED EVENTS
+        <small>near 
+            <span id="searchLocation">...</span>
+        </small>
+        </h1>
+
         <!-- Results area -->
         <div class="row" id="searchResultsRow"></div>
+        </div>
         <br>
         <br>
         <!-- Pagination -->
@@ -84,16 +87,16 @@
             <ul class="pagination pagination-lg">
                 <li class="page-item">
                     <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                    </a>
                 </li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                 <li class="page-item"><a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span></a>
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span></a>
                 </li>
             </ul>
         </div>
@@ -113,8 +116,8 @@
                                 <br>
                                 <br>
                                 <a href="#" class="btn btn-info btn-lg">
-                  <span class="glyphicon glyphicon-envelope"></span> SUBMIT
-                </a>
+                                    <span class="glyphicon glyphicon-envelope"></span> SUBMIT
+                                </a>
                             </div>
                         </form>
                     </div>
