--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-6">
-                        <h1><a href="#" title="scroll down for your viewing pleasure">EVENT APP</a></h1>
+                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">EVENT APP</a></h1>
                     </div>
                 </div>
             </div>
@@ -71,12 +71,11 @@
         <br />
         <!-- Below photo -->
         <div id="belowPhoto" class="well">
-        <h1 class="my-4">FEATURED EVENTS
-        <small>near 
+        <h1 class="font">FEATURED EVENTS</h1>
+        <h3 class="font">Near 
             <span id="searchLocation">...</span>
-        </small>
-        </h1>
-
+        </h3>
+        
         <!-- Results area -->
         <div class="row" id="searchResultsRow"></div>
         </div>
@@ -107,18 +106,20 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class=" col-xs-12 col-sm-12 col-md-10 col-lg-10 ">
+                <div class=" col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 ">
                     <div class="well">
                         <form action="#">
                             <div class="input-form">
-                                <h4>SUBSCRIBE FOR FUTURE EVENTS</h4>
+                                <h4 class="subscribe-text">SUBSCRIBE FOR FUTURE EVENTS</h4>
+                                <br><br>
+                                <div class="input-field">
                                 <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here" required>
-                                <br>
-                                <br>
+                                </div>
+                                <br><br>
                                 <a href="#" class="btn btn-info btn-lg">
                                     <span class="glyphicon glyphicon-envelope"></span> SUBMIT
                                 </a>
-                            </div>
+                            </div
                         </form>
                     </div>
                 </div>
