--- a/index.html
+++ b/index.html
@@ -81,7 +81,25 @@
         </h3>
         
         <!-- Results area -->
-        <div class="row" id="searchResultsRow"></div>
+        <div class="row" id="searchResultsRow">
+                    <div class="container">
+            <ul class="pagination pagination-lg">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span></a>
+                </li>
+            </ul>
+        </div>
+        </div>
         
         </div>
         <br>
