--- a/details.html
+++ b/details.html
@@ -28,7 +28,7 @@
     </div>
     <!-- Cleveland Photo -->
     <div class="container">
-        <section id="photo" class="py-5 bg-image-full">
+        <section id="details-photo" class="py-5 bg-image-full">
         </section>
         <br />
         <br />
