--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                                         <select class="form-control" id="categoriesDropDown">
                                             <option value="Comedy">Comedy</option>
                                             <option value="Concerts">Concerts</option>
-                                            <option value="Conferences & Tradeshows">Conferences &amp; Tradeshows</option>
+                                            <option value="Conferences">Conferences</option>
                                             <option value="Festivals">Festivals</option>
-                                            <option value="Food & Wine" selected>Food &amp; Wine</option>
-                                            <option value="Kids & Family">Kids &amp; Family</option>
-                                            <option value="Nightlife & Singles">Nightlife &amp; Singles</option>
+                                            <option value="Food" selected>Food</option>
+                                            <option value="Family">Family</option>
+                                            <option value="Nightlife">Nightlife</option>
                                             <option value="Performing Arts">Performing Arts</option>
                                             <option value="Sports">Sports</option>
                                         </select>
