--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <a href="#" class="btn btn-info btn-lg">
                                     <span class="glyphicon glyphicon-envelope"></span> SUBMIT
                                 </a>
-                            </div
+                            </div>
                         </form>
                     </div>
                 </div>
