--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <!-- <ul class="nav pull-right navbar-nav"> -->
                             <form class="navbar-form form-inline">
                                 <li>
-                                    <h1 id="find" class="py-5" title="find an event in your chosen city">FIND</h1>
+                                    <h1 id="find" class="py-5" title="find an event in your chosen city">Find Events</h1>
                                     <!-- input boxes -->
                                     <!-- Event categories -->
                                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
@@ -74,7 +74,8 @@
                                         </select>
                                     </div>
                                     <!-- submit button -->
-                                    <button type="submit" id="submitInfo" class="btn btn-default search-form-btn" id="run-search"><i class="glyphicon glyphicon-search"></i></button>
+                                    <button type="submit" id="submitInfo" class="btn btn-default search-form-btn" id="run-search">
+                                    <p>SEARCH <i class="glyphicon glyphicon-search"></i></p></button>
                                 </li>
                             </form>
                         </ul>
