updated html for result cards

--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@
         <br />
         <br />
         <!-- Below photo -->
-        <div id="belowPhoto" class="well">
-            <h1 class="font">FEATURED EVENTS</h1>
-            <h3 class="font">Near 
+        <h1 class="font">FEATURED EVENTS</h1>
+        <h3 class="font">Near 
             <span id="searchLocation">...</span>
         </h3>
-            <!-- Results area -->
-            <div class="row" id="searchResultsRow">
+        <br />
+        <!-- Results area -->
+        <div class="row" id="searchResultsRow">
+        <div id="belowPhoto"></div>
                 <!-- Pagination -->
                 <div class="container">
                     <ul class="pagination pagination-lg">
