added message for not events and page will not load with past events

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                             <!-- Event location -->
                                             <input type="text" id="eventLocation" class="form-control search-form-text" placeholder="Event Location">
                                             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                                <div class="input-group-addon">DATE</div>
+                                                <div class="input-group-addon">Date</div>
                                                 <select class="form-control" id="dateDropDown">
                                                     <option value="Future" selected>Future</option>
                                                     <option value="Today">Today</option>
@@ -74,7 +74,7 @@
                                             </div>
                                             <!-- submit button -->
                                             <button type="submit" id="submitInfo" class="btn btn-default search-form-btn" id="run-search">
-                                                <p>SEARCH <i class="glyphicon glyphicon-search"></i></p>
+                                                <p>SEARCH</p>
                                             </button>
                                         </li>
                                     </form>
