--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- style sheet to override bootstrap -->
-    <!--  <link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 </head>
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="row">
                 <div class=" col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 ">
-                    <div class="well">
+                    <div id="email-well" class="well">
                         <form action="#">
                             <div class="input-form">
                                 <h4 class="subscribe-text">SUBSCRIBE FOR FUTURE EVENTS</h4>
