updated email form

--- a/details.html
+++ b/details.html
@@ -59,22 +59,20 @@
                     </div>
                 </div> 
             </div>
-            <br />
-            <br />
             <!-- Below photo -->
             <div id="belowPhoto" class="well">
                 <h1 id="titleRow" class="font"></h1>
                 <h2 id="startTime" class="font"></h2>
                 <!-- Details area -->
                 <div class="row" id="eventDescriptionRow">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-lg-3">
                         <img class="img-event" id="imageEvent" src="http://placehold.it/200x200" alt="Image of Event">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-lg-4">
                         <h3 class="event-details" id="eventDetails">Event Details</h3>
                         <h3 class="event-description" id="eventDescription">Event Description</h3>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-5 col-lg-5">
                         <h2 class="font">Directions to Event</h2>
                         <img class="map-event" src="http://placehold.it/350x350" alt="Map of Event">
                         <!-- Pagination -->
@@ -102,7 +100,7 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 ">
-                        <div class="well">
+                        <div class="email-form">
                             <form action="#">
                                 <div class="input-form">
                                     <h4 class="subscribe-text">SUBSCRIBE FOR FUTURE EVENTS</h4>
