--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="row">
                 <div class=" col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 ">
-                    <div id="email-well" class="well">
+                    <div class="email-form" >
                         <form action="#">
                             <div class="input-form">
                                 <h4 class="subscribe-text">SUBSCRIBE FOR FUTURE EVENTS</h4>
