updated details.html and style.css files

--- a/details.html
+++ b/details.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <!-- Below photo -->
-        <div id="belowPhoto" class="well">
+        <div id="belowPhotoDetails" class="well">
             <h1 id="titleRow" class="font"></h1>
             <h2 id="startTime" class="font"></h2>
             <!-- Details area -->
