--- a/index.html
+++ b/index.html
@@ -94,32 +94,28 @@
         </h3>
         <br />
         <!-- Results area -->
-        <div class="row" id="searchResultsRow">
-            </div>
-            <!-- Pagination -->
-                <div class="container">
-                    <ul class="pagination pagination-lg">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
+        <div class="row" id="searchResultsRow"></div>
+        <!-- Pagination -->
+        <div class="container">
+            <ul class="pagination pagination-lg">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
                     </a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#" aria-label="Next">
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span></a>
-                        </li>
-                    </ul>
-                </div>
+                </li>
+            </ul>
         </div>
-        <br>
-        <br>
     </div>
-    <br />
-    <br />
+    <br>
+    <br>
     <!--email-input-->
     <section>
         <div class="container">
