--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
         </header>
     </div>
     <br />
-    <!-- Cleveland Photo -->
     <div class="container">
-        <section id="photo" class="py-5 bg-image-full">
             <!-- Navbar with search form -->
+
             <div class="container-fluid">
                 <div id="nav">
                     <div class="navbar navbar-static">
@@ -83,8 +82,45 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="assets/image/slide1.jpg" alt="Los Angeles">
+    </div>
+
+    <div class="item">
+      <img src="assets/image/slide2.jpg" alt="Chicago">
+    </div>
+
+    <div class="item">
+      <img src="assets/image/slide3.jpg" alt="New York">
+    </div>
+  
+
+  <div class="item">
+      <img src="assets/image/slide4.jpg" alt="Chicago">
+    </div>
+
+    <div class="item">
+      <img src="assets/image/slide5.jpg" alt="New York">
+    </div>
+  <div class="item">
+      <img src="assets/image/slide6.jpg" alt="Chicago">
+    </div>
+
+    <div class="item">
+      <img src="assets/image/slide7.jpg" alt="New York">
+    </div>
+  
+
+  <div class="item">
+      <img src="assets/image/slide8.jpg" alt="Chicago">
+    </div>
+  </div>
+  </div> 
+  </div>
         <br />
         <br />
         <!-- Below photo -->
@@ -160,5 +196,7 @@
     <script type="text/javascript" src="http://api.eventful.com/js/api"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="assets/javascript/main.js"></script>
 </body>
