--- a/details.html
+++ b/details.html
@@ -75,7 +75,21 @@
                 </div>
                 <div class="col-md-5 col-lg-5">
                     <h2 class="font">Directions to Event</h2>
-                    <img class="map-event" src="http://placehold.it/350x350" alt="Map of Event">
+                    h2>
+                    <div class="food-options">
+        <div class="buttons">
+            <h4>Select type of food: </h4>
+                <div class="col-6map">
+                <button id="fast">Fast</button>
+                <button id="happy">Happy Hour</button>
+                <button id="asian">Asian</button>
+                <button id="italian">Italian</button>
+                <button id="mex">Mexican</button>
+                <button id="drunk">I'm Drunk</button>
+            </div>
+             </div>
+    </div>
+    <div id="map" style="width: 450px; height: 350px"></div>
                     <!-- Pagination -->
                     <div class="container">
                         <ul class="pagination pagination-lg">
