--- a/details.html
+++ b/details.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- style sheet to override bootstrap -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -75,7 +76,6 @@
                 </div>
                 <div class="col-md-5 col-lg-5">
                     <h2 class="font">Directions to Event</h2>
-                    h2>
                     <div class="food-options">
         <div class="buttons">
             <h4>Select type of food: </h4>
@@ -154,6 +154,7 @@
     <!-- tooltip -->
     <script type="text/javascript" src="tooltipster-master/dist/js/tooltipster.bundle.min.js"></script>
     <script src="assets/javascript/details.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAOCKzruXFCLLp-DaX0-VmCjSXuN8_EkQ&libraries=places&callback=initMap"></script>
 </body>
 
 </html>
