--- a/index.html
+++ b/index.html
@@ -87,36 +87,35 @@
         <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="assets/image/slide1.jpg" alt="Los Angeles">
+      <img src="assets/image/slide2.jpg" alt="pic1">
     </div>
 
     <div class="item">
-      <img src="assets/image/slide2.jpg" alt="Chicago">
+      <img src="assets/image/slide18.jpg" alt="pic2">
     </div>
 
     <div class="item">
-      <img src="assets/image/slide3.jpg" alt="New York">
+      <img src="assets/image/slide7.jpg" alt="pic3">
     </div>
   
 
   <div class="item">
-      <img src="assets/image/slide4.jpg" alt="Chicago">
+      <img src="assets/image/slide8.jpg" alt="pic4">
     </div>
 
     <div class="item">
-      <img src="assets/image/slide5.jpg" alt="New York">
+      <img src="assets/image/slide9.jpg" alt="pic5">
     </div>
   <div class="item">
-      <img src="assets/image/slide6.jpg" alt="Chicago">
+      <img src="assets/image/slide10.jpg" alt="pic6">
     </div>
 
     <div class="item">
-      <img src="assets/image/slide7.jpg" alt="New York">
+      <img src="assets/image/slide11.jpg" alt="pic7">
     </div>
-  
 
   <div class="item">
-      <img src="assets/image/slide8.jpg" alt="Chicago">
+      <img src="assets/image/slide19.jpg" alt="pic8">
     </div>
   </div>
   </div> 
