--- a/details.html
+++ b/details.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
-
 <body>
     <!-- Master header -->
     <div class="container">
@@ -121,11 +119,11 @@
                                     <br>
                                     <br>
                                     <div class="input-field">
-                                        <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here" required>
+                                        <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here">
                                     </div>
                                     <br>
                                     <br>
-                                    <a href="#" class="btn btn-info btn-lg">
+                                    <a href="#" class="btn btn-info btn-lg" id="emailbuttonSubmit">
                   <span class="glyphicon glyphicon-envelope"></span> SUBMIT
                 </a>
                                 </div>
@@ -156,5 +154,4 @@
     <script src="assets/javascript/details.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAOCKzruXFCLLp-DaX0-VmCjSXuN8_EkQ&libraries=places&callback=initMap"></script>
 </body>
-
 </html>
