--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +14,6 @@
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 </head>
-
 <body>
     <!-- Master header -->
     <div class="container">
@@ -32,7 +30,6 @@
     <br />
     <div class="container">
             <!-- Navbar with search form -->
-
             <div class="container-fluid">
                 <div id="nav">
                     <div class="navbar navbar-static">
@@ -82,38 +79,31 @@
                         </div>
                     </div>
                 </div>
-
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
       <img src="assets/image/slide2.jpg" alt="pic1">
     </div>
-
     <div class="item">
       <img src="assets/image/slide18.jpg" alt="pic2">
     </div>
-
     <div class="item">
       <img src="assets/image/slide7.jpg" alt="pic3">
     </div>
   
-
   <div class="item">
       <img src="assets/image/slide8.jpg" alt="pic4">
     </div>
-
     <div class="item">
       <img src="assets/image/slide9.jpg" alt="pic5">
     </div>
   <div class="item">
       <img src="assets/image/slide10.jpg" alt="pic6">
     </div>
-
     <div class="item">
       <img src="assets/image/slide11.jpg" alt="pic7">
     </div>
-
   <div class="item">
       <img src="assets/image/slide19.jpg" alt="pic8">
     </div>
@@ -163,11 +153,11 @@
                                 <br>
                                 <br>
                                 <div class="input-field">
-                                    <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here" required>
+                                    <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here">
                                 </div>
                                 <br>
                                 <br>
-                                <a href="#" class="btn btn-info btn-lg">
+                                <a href="#" class="btn btn-info btn-lg" id="emailbuttonSubmit">
                                     <span class="glyphicon glyphicon-envelope"></span> SUBMIT
                                 </a>
                             </div>
@@ -197,3 +187,4 @@
     <script type="text/javascript" src="tooltipster-master/dist/js/tooltipster.bundle.min.js"></script>
     <script src="assets/javascript/main.js"></script>
 </body>
+</html>
