removed pagination and edited featured events button

--- a/details.html
+++ b/details.html
@@ -93,12 +93,8 @@
                         <ul class="pagination pagination-lg">
                             <li class="page-item">
                                 <a class="page-link" href="index.html" aria-label="Previous">
-          <span aria-hidden="true">&laquo; Return to 
-            <span id="eventKeywords">Featured Events </span>
-                near
-              <span id="searchLocation">...</span>
-          </span>
-        </a>
+                                    <span aria-hidden="true">&laquo; Return to Featured Events</span>
+                                </a>
                             </li>
                         </ul>
                     </div>
