--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
                         <div class="container">
                             <div class="navbar">
                                 <!-- <div class="navbar-collapse collapse"> -->
-                                <ul class="nav navbar-nav">
                                     <!-- <ul class="nav pull-right navbar-nav"> -->
                                     <form class="navbar-form form-inline">
-                                        <li>
-                                            <h1 id="find" class="py-5" title="find an event in your chosen city">Find Events</h1>
                                             <!-- input boxes -->
                                             <!-- Event categories -->
                                             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
@@ -74,7 +71,6 @@
                                             </button>
                                         </li>
                                     </form>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -123,7 +119,7 @@
     <br>
     <br>
     <!--email-input-->
-    <section>
+    
         <div class="container">
             <div class="row">
                 <div class=" col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 ">
@@ -147,7 +143,7 @@
                 </div>
             </div>
         </div>
-    </section>
+ </div>
     <!-- Footer -->
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
