added jquery ui

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <!-- pasted from jquery ui source -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $('#title').tooltip();
+        });
+    </script>
 </head>
 <body>
     <!-- Master header -->
