--- a/details.html
+++ b/details.html
@@ -11,6 +11,7 @@
     <!-- style sheet to override bootstrap -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 </head>
 <body>
     <!-- Master header -->
@@ -116,6 +117,7 @@
                                     <br>
                                     <div class="input-field">
                                         <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here">
+                                        <span id="emailValidationResult"></span>
                                     </div>
                                     <br>
                                     <br>
