--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                                 <br>
                                 <div class="input-field">
                                     <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here">
+                                    <span id="emailValidationResult"></span>
                                 </div>
                                 <br>
                                 <br>
