email input size

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <br>
                                 <br>
                                 <div class="input-field">
-                                    <input class="btn btn-lg" name="email" id="email" type="email" placeholder="Enter Email Here">
+                                    <input class="btn btn-md" name="email" id="email" type="email" placeholder="Enter Email Here">
                                     <span id="emailValidationResult"></span>
                                 </div>
                                 <br>
