changed food title

--- a/details.html
+++ b/details.html
@@ -74,7 +74,7 @@
                     <h3 class="event-description" id="eventDescription">Event Description</h3>
                 </div>
                 <div class="col-md-5 col-lg-5">
-                    <h2 class="font">Directions to Event</h2>
+                    <h2 class="font">Hungry? Find Food</h2>
                     <div class="food-options">
         <div class="buttons">
             <h4>Select type of food: </h4>
