--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EVENT APP | FIND</title>
+    <title>Excites and Bites | FIND</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -16,11 +16,6 @@
     <!-- pasted from jquery ui source -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-
-        });
-    </script>
 </head>
 <body>
     <!-- Master header -->
@@ -29,7 +24,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">EVENT APP</a></h1>
+                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">Excites and Bites</a></h1>
                     </div>
                 </div>
             </div>
@@ -167,7 +162,6 @@
     <script type="text/javascript" src="http://api.eventful.com/js/api"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- tooltip -->
     <script src="assets/javascript/main.js"></script>
 </body>
 </html>
