--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EVENT APP | DETAILS</title>
+    <title>Excites and Bites | DETAILS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -20,7 +20,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">EVENT APP</a></h1>
+                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">Excites and Bites</a></h1>
                     </div>
                 </div>
             </div>
