update map and some styling

--- a/details.html
+++ b/details.html
@@ -20,7 +20,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">Excites and Bites</a></h1>
+                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure"><img src="assets/image/logo.png"></a></h1>
                     </div>
                 </div>
             </div>
@@ -66,29 +66,27 @@
             <h2 id="startTime" class="font"></h2>
             <!-- Details area -->
             <div class="row" id="eventDescriptionRow">
-                <div class="col-md-3 col-lg-3">
-                    <img class="img-event" id="imageEvent" src="http://placehold.it/200x200" alt="Image of Event">
+                <div class="col-md-5 col-lg-5">
+                    <h2 class="event-details" id="eventDetails">Event Details</h2>
+                    <h2 class="event-description" id="eventDescription">Event Description</h2>
                 </div>
                 <div class="col-md-4 col-lg-4">
-                    <h3 class="event-details" id="eventDetails">Event Details</h3>
-                    <h3 class="event-description" id="eventDescription">Event Description</h3>
-                </div>
-                <div class="col-md-5 col-lg-5">
-                    <h2 class="font">Hungry? Find Food</h2>
+                    <h2 class="font">Hungry? Find Food <i class="fa  fa-cutlery fa-2x"></i> </h2>
                     <div class="food-options">
+
         <div class="buttons">
-            <h4>Select type of food: </h4>
+            <h4> Select Type: </h4>
                 <div class="col-6map">
                 <button id="fast">Fast</button>
                 <button id="happy">Happy Hour</button>
                 <button id="asian">Asian</button>
                 <button id="italian">Italian</button>
                 <button id="mex">Mexican</button>
-                <button id="drunk">I'm Drunk</button>
+                <button id="drunk">Drunk</button>
             </div>
              </div>
     </div>
-    <div id="map" style="width: 450px; height: 350px"></div>
+    <div id="map" style="width: 550px; height: 350px"></div>
                     <!-- Pagination -->
                     <div class="container">
                         <ul class="pagination pagination-lg">
@@ -104,39 +102,13 @@
         </div>
         <br />
         <br />
-        <!--email-input-->
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class=" col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 ">
-                        <div class="email-form">
-                            <form action="#">
-                                <div class="input-form">
-                                    <h4 class="subscribe-text">SUBSCRIBE FOR FUTURE EVENTS</h4>
-                                    <br>
-                                    <br>
-                                    <div class="input-field">
-                                        <input class="btn btn-md" name="email" id="email" type="email" placeholder="Enter Email Here">
-                                        <span id="emailValidationResult"></span>
-                                    </div>
-                                    <br>
-                                    <br>
-                                    <a href="#" class="btn btn-info btn-lg" id="emailbuttonSubmit">
-                  <span class="glyphicon glyphicon-envelope"></span> SUBMIT
-                </a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </div>
+        
     <!-- Footer -->
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <footer class="py-5 bg-dark">
                 <div class="footer-container">
-                    <p class="m-0 text-center text-white">Copyright &copy; CodingCrew Event App 2017</p>
+                    <p class="m-0 text-center text-white">Copyright &copy; CodingCrew Excites&Bites App 2017</p>
                 </div>
             </footer>
         </div>
