--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure">Excites and Bites</a></h1>
+                        <h1><a class="home-return" href="index.html" title="scroll down for your viewing pleasure"><img src="assets/image/logo.png"></a></h1>
+
                     </div>
                 </div>
             </div>
         </header>
     </div>
-    <br />
+
     <div class="container">
             <!-- Navbar with search form -->
             <div class="container-fluid">
@@ -47,10 +48,10 @@
                                                 <div class="input-group-addon">Event categories</div>
                                                 <select class="form-control" id="categoriesDropDown">
                                                     <option value="Comedy">Comedy</option>
-                                                    <option value="Concerts">Concerts</option>
+                                                    <option value="Concerts" selected>Concerts</option>
                                                     <option value="Conferences">Conferences</option>
                                                     <option value="Festivals">Festivals</option>
-                                                    <option value="Food" selected>Food</option>
+                                                    <option value="Food">Food</option>
                                                     <option value="Family">Family</option>
                                                     <option value="Nightlife">Nightlife</option>
                                                     <option value="Performing Arts">Performing Arts</option>
@@ -110,7 +111,6 @@
   </div> 
   </div>
         <br />
-        <br />
         <!-- Below photo -->
         <h1 class="font">FEATURED EVENTS</h1>
         <h3 class="font">Near 
@@ -153,7 +153,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <footer class="py-5 bg-dark">
                 <div class="footer-container">
-                    <p class="m-0 text-center text-white">Copyright &copy; CodingCrew Event App 2017</p>
+                    <p class="m-0 text-center text-white">Copyright &copy; CodingCrew Excites&Bites App 2017</p>
                 </div>
             </footer>
         </div>
