--- a/details.html
+++ b/details.html
@@ -102,7 +102,7 @@
         </div>
         <br />
         <br />
-        
+       </div> 
     <!-- Footer -->
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
